# drexel-api

./: .flake8  .gitignore  LICENSE  README.md  manage.py  pyproject.toml
courses/: admin.py  models.py
courses/migrations/: 0001_initial.py
drexelapi/: asgi.py  settings.py  urls.py  wsgi.py
tasks/: drexeltms.py
